--- a/index.html
+++ b/index.html
@@ -1,25 +1,40 @@
 ---
 ---
 <div class="banner"></div>
+<div class="wt-bar"></div>
 
-<div class="mission-box">
-  <div class="span12">
-  <h3>Your Story of Heartfelt, Personalized Prenatal and Well-Woman Care Starts Here ...</h3>
-  <p> Love where you get your care. That’s our vision: the creation of a warm,
-  comfortable and inviting space to receive prenatal and gynecological care
-  and to birth your baby. The certified-nurse midwives of Seven Sisters
-  Midwifery and Community Birth Center provide the highest quality clinical
-  care in a space that celebrates your body, your family and your birth. Join
-  us as we write a new story of giving birth in western Massachusetts.</p>
-  <p>Now accepting patients for well-women gynecological care in our temporary
-  office in downtown Northampton. Please go to our calendar below to schedule
-  an appointment.</p>
-  <p>New offices and free-standing birth center coming to Florence/Northampton
-  in 2019!</p>
-  </div>
+<div class="jumbotron text-center">
+  <img class="home img-responsive center-block" src="assets/uploads/theme/home.jpg" alt="Mountains">
 </div>
 
-<div class="row">
+<div class="card bg-light" style="width: 100%;">
+  <div class="card-body">
+    <h3 class="card-title">Your Story of Heartfelt, Personalized Prenatal and
+      Well-Woman Care Starts Here ...</h3>
+    <p class="card-text">Love where you get your care. That’s our vision: the
+      creation of a warm, comfortable and inviting space to receive prenatal
+      and gynecological care and to birth your baby. The certified-nurse
+      midwives of Seven Sisters Midwifery and Community Birth Center provide
+      the highest quality clinical care in a space that celebrates your body,
+      your family and your birth. Join us as we write a new story of giving
+      birth in western Massachusetts.
+    </p>
+    <p class="card-text">Now accepting patients for well-women gynecological
+      care in our temporary office in downtown Northampton. Please go to our
+      calendar below to schedule an appointment.</p>
+    <p class="card-text">New offices and free-standing birth center coming to
+      Florence/Northampton in 2019!</p>
+    <a class="btn btn-outline-primary" data-toggle="modal" data-target="#mailModal" role="button">
+      join mailing list
+    </a>
+    <a class="btn btn-outline-primary" href="https://cozycal.com/sevensistersmidwifery" role="button">
+      book appointment
+    </a>
+  </div>
+</div>
+<div class="wt-bar"></div>
+
+<!-- <div class="row">
   <div class="span12">
     <div class="row">
       <div class="span6">
@@ -42,5 +57,52 @@
         </div>
     	</div>
     </div>
+  </div>
+</div>-->
+
+<!-- Modal -->
+<div id="mailModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <!-- Begin MailChimp Signup Form-->
+      <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+      <style type="text/css">
+      	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+      	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+      	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+      </style>
+      <div id="mc_embed_signup">
+      <form action="https://jackmillerbott.us14.list-manage.com/subscribe/post?u=e4bbc8256b58df27e432e776c&amp;id=2757555bca" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div id="mc_embed_signup_scroll">
+      	<h2>Subscribe to our mailing list</h2>
+      <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+      <div class="mc-field-group">
+      	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+      </label>
+      	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+      </div>
+      <div class="mc-field-group">
+      	<label for="mce-FNAME">First Name </label>
+      	<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+      </div>
+      <div class="mc-field-group">
+      	<label for="mce-LNAME">Last Name </label>
+      	<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+      </div>
+      	<div id="mce-responses" class="clear">
+      		<div class="response" id="mce-error-response" style="display:none"></div>
+      		<div class="response" id="mce-success-response" style="display:none"></div>
+      	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_e4bbc8256b58df27e432e776c_2757555bca" tabindex="-1" value=""></div>
+          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+          </div>
+      </form>
+      </div>
+      <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+      <!--End mc_embed_signup-->
+    </div>
+
   </div>
 </div>
