--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 ---
+
 <div class="banner"></div>
 <div class="wt-bar"></div>
 
@@ -24,10 +25,10 @@
       calendar below to schedule an appointment.</p>
     <p class="card-text">New offices and free-standing birth center coming to
       Florence/Northampton in 2019!</p>
-    <a class="btn btn-outline-primary" data-toggle="modal" data-target="#mailModal" role="button">
+    <a class="btn btn-outline-primary buttons" data-toggle="modal" data-target="#mailModal" role="button">
       join mailing list
     </a>
-    <a class="btn btn-outline-primary" href="https://cozycal.com/sevensistersmidwifery" role="button">
+    <a class="btn btn-outline-primary buttons" href="https://cozycal.com/sevensistersmidwifery" role="button">
       book appointment
     </a>
   </div>
@@ -103,6 +104,11 @@
       <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
       <!--End mc_embed_signup-->
     </div>
-
   </div>
 </div>
+
+<!-- JS code -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+<!--JS below-->
